--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	url = git@github.com:keystone-engine/keystone.git
 [submodule "dep/distrom3"]
 	ignore = untracked
+[submodule "dep/args"]
+	path = dep/args
+	url = git@github.com:Taywee/args.git
